[gd_scene load_steps=17 format=3 uid="uid://bfuqdsqqd0xnt"]

[ext_resource type="Script" uid="uid://sbuufb40xr8t" path="res://MiniGameTscn/mini_game_1.gd" id="1_wlgql"]
[ext_resource type="Texture2D" uid="uid://b3u5b0dhlqkyn" path="res://MiniGameAssets/37247.png" id="2_fppsf"]
[ext_resource type="PackedScene" uid="uid://cvht4rnmihuxd" path="res://MiniGameTscn/Mini_npc.tscn" id="3_fppsf"]
[ext_resource type="PackedScene" uid="uid://cmk2vye1repn1" path="res://interactions/interactable.tscn" id="4_nc40r"]
[ext_resource type="PackedScene" uid="uid://bmg6hdeph7oat" path="res://MiniGameTscn/hints.tscn" id="5_5a6dd"]
[ext_resource type="PackedScene" uid="uid://basf3gm2w32eq" path="res://MiniGameTscn/Marker.tscn" id="6_dwwv5"]
[ext_resource type="PackedScene" uid="uid://ct85fwevut7jl" path="res://MiniGameTscn/transition_screen.tscn" id="7_xuktg"]
[ext_resource type="PackedScene" uid="uid://c28ebfudgkx7h" path="res://MiniGameTscn/plus_1.tscn" id="9_lc8ph"]
[ext_resource type="Script" uid="uid://bip467y1gltsg" path="res://MiniGameTscn/hints_level2.gd" id="10_5tyod"]
[ext_resource type="PackedScene" uid="uid://5a0ea0qpmstb" path="res://MiniGameTscn/Hintpaper_1.tscn" id="11_ivn8i"]
[ext_resource type="PackedScene" uid="uid://d1rvr1ufqtf2d" path="res://MiniGameTscn/hintpaper_2.tscn" id="12_2wyrx"]
[ext_resource type="AudioStream" uid="uid://crdh17ghs3wtn" path="res://sounds/slow-2021-10-19_-_Funny_Bit_-_www.FesliyanStudios.com (1).mp3" id="13_2wyrx"]
[ext_resource type="PackedScene" uid="uid://b54t43uh24p83" path="res://MiniGameTscn/hintpaper_3.tscn" id="13_y5j04"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wunvc"]
texture = ExtResource("2_fppsf")
margins = Vector2i(3, 0)
separation = Vector2i(0, 3)
49:12/0 = 0
49:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
50:12/0 = 0
50:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
42:12/0 = 0
42:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
43:12/0 = 0
43:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
44:12/0 = 0
44:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
45:12/0 = 0
45:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
46:12/0 = 0
46:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
47:12/0 = 0
47:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
48:12/0 = 0
48:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
51:12/0 = 0
51:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
52:12/0 = 0
52:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
53:12/0 = 0
53:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
54:12/0 = 0
54:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 8, 4.13675, 8, 8, -8, 8, -8, 3.95689)
55:12/0 = 0
55:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.77703, 3.95689, 3.95689, -8, 8, -8, 8, 8, -8, 8, -8, 3.95689)
42:11/0 = 0
42:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:10/0 = 0
42:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:9/0 = 0
42:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:8/0 = 0
42:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:7/0 = 0
42:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:6/0 = 0
42:5/0 = 0
42:4/0 = 0
42:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:3/0 = 0
42:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:2/0 = 0
42:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:1/0 = 0
42:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.77703, -8, -3.59717, 8, -8, 8, -8, 3.95689)
42:0/0 = 0
42:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -3.77703, -4.13675, -3.95689, 8, -8, 8)
43:0/0 = 0
43:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
44:0/0 = 0
44:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
45:0/0 = 0
45:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
46:0/0 = 0
46:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
47:0/0 = 0
47:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
48:0/0 = 0
48:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
49:0/0 = 0
49:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
50:0/0 = 0
50:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
51:0/0 = 0
51:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
52:0/0 = 0
52:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
53:0/0 = 0
53:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
54:0/0 = 0
54:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.77703, -8, -3.95689)
55:0/0 = 0
55:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 4.13675, 8, 4.13675, -3.95689, -8, -3.95689)
55:1/0 = 0
55:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:2/0 = 0
55:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:3/0 = 0
55:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:4/0 = 0
55:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:5/0 = 0
55:6/0 = 0
55:7/0 = 0
55:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:8/0 = 0
55:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:9/0 = 0
55:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:10/0 = 0
55:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
55:11/0 = 0
55:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.04682, -8, 8, -8, 8, 8, 4.04682, 8)
54:3/0 = 0

[sub_resource type="TileSet" id="TileSet_w2uqs"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wunvc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogmh3"]
size = Vector2(66, 35)

[node name="Mini_game_level1" type="Node"]
script = ExtResource("1_wlgql")

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w2uqs")
format = 2
layer_0/tile_data = PackedInt32Array(262143, 3604480, 12, 262141, 3342336, 12, 262142, 3407872, 12, 262139, 3342336, 12, 262140, 3407872, 12, 262137, 3342336, 12, 262138, 3407872, 12, 393217, 3342336, 12, 393218, 3407872, 12, 458751, 3342336, 12, 393216, 3407872, 12, 458749, 3342336, 12, 458750, 3407872, 12, 458747, 3342336, 12, 458748, 3407872, 12, 458745, 3342336, 12, 458746, 3407872, 12, 393219, 3342336, 12, 393220, 3407872, 12, 393221, 3342336, 12, 393222, 3407872, 12, 196611, 3604480, 3, 196612, 3342336, 12, 196613, 3407872, 12, 196614, 3342336, 12, 196615, 3407872, 12, 393223, 3473408, 12, 393224, 3473408, 12, 393225, 3473408, 12, 196616, 3473408, 12, 196617, 3473408, 12, 196618, 3604480, 1342177280, 393226, 3473408, 12, 458762, 3604480, 10, 524298, 3604480, 10, 589834, 3604480, 10, 655370, 3604480, 10, 720906, 3604480, 10, 786442, 3604480, 10, 131082, 3604480, 2, 65546, 3604480, 2, 10, 3604480, 2, -65526, 3604480, 2, -131062, 3604480, 2, 131085, 3604480, 2, 65549, 3604480, 2, 13, 3604480, 2, -65523, 3604480, 2, -131059, 3604480, 2, 393229, 3604480, 8, 458765, 3604480, 8, 524301, 3604480, 8, 589837, 3604480, 8, 655373, 3604480, 8, 720909, 3604480, 8, 786445, 3604480, 8, 851978, 3276800, 0, 851977, 3276800, 0, 851976, 3276800, 0, 851975, 3276800, 0, 851974, 3276800, 0, 851973, 3276800, 0, 983053, 3342336, 12, 983052, 3145728, 12, 983051, 3145728, 12, 983050, 3145728, 12, 983049, 3145728, 12, 983048, 3145728, 12, 983047, 3145728, 12, 983046, 3145728, 12, 983045, 3145728, 12, -262133, 3342336, 0, -262132, 3342336, 0, -262131, 3604480, 0, -196595, 3604480, 1, -196598, 3604480, 2, -262134, 3604480, 2, -851925, 3604480, 2, -786389, 3604480, 2, -720853, 3604480, 2, 851972, 3604480, 2, 917508, 3604480, 2, 983044, 3604480, 2, 196607, 3604480, 2, 131071, 3604480, 2, 65535, 3604480, 2, -1, 3604480, 2, -65537, 3604480, 2, -131073, 3604480, 2, -196609, 3604480, 2, -262145, 3604480, 2, -327681, 3604480, 2, -393217, 3604480, 2, -458753, 3604480, 2, -524288, 3145728, 0, 131075, 3604480, 3, 65539, 3604480, 3, 3, 3604480, 3, -65533, 3604480, 3, -131069, 3604480, 3, -196605, 3604480, 3, -262141, 3604480, 3, -327677, 3604480, 3, -393213, 3604480, 3, -458749, 3604480, 3, -524285, 3604480, 0, 262136, 3080192, 12, 262135, 3080192, 12, 262134, 3080192, 12, 262133, 3080192, 12, 262132, 3080192, 12, 262131, 3080192, 12, 262130, 3080192, 12, 262129, 3080192, 12, 458744, 3080192, 12, 458743, 3080192, 12, 458742, 3080192, 12, 458741, 3080192, 12, 458740, 3080192, 12, 458739, 3080192, 12, 458738, 3080192, 12, 458737, 3080192, 12, 458736, 3080192, 12, 458735, 3080192, 12, 458734, 3080192, 12, 458733, 2752512, 12, 262128, 3080192, 12, 262127, 3080192, 12, 262126, 3080192, 12, 262125, 3080192, 12, 327661, 2752512, 8, 393197, 2752512, 8, 196632, 3604480, 0, 262168, 3604480, 2, 327704, 3604480, 2, 393240, 3604480, 2, 458776, 3604480, 2, 524312, 3604480, 2, 589848, 3604480, 2, 655384, 3604480, 2, 720920, 3604480, 2, 786456, 3604480, 2, 851992, 3604480, 2, 917528, 3604480, 2, 983064, 3604480, 12, 983054, 3342336, 12, 983055, 3342336, 12, 983056, 3342336, 12, 983057, 3342336, 12, 983058, 3342336, 12, 983059, 3342336, 12, 983060, 3342336, 12, 983061, 3342336, 12, 983062, 3342336, 12, 983063, 3342336, 12, 393230, 3342336, 0, 196622, 3211264, 0, 196623, 3211264, 0, 196624, 3211264, 0, 196625, 3211264, 0, 196626, 3211264, 0, 196627, 3211264, 0, 196628, 3211264, 0, 196629, 3211264, 0, 196630, 3211264, 0, 196631, 3211264, 0, 393231, 3211264, 0, 393232, 3211264, 0, 393233, 3211264, 0, 393234, 3211264, 0, 393235, 3211264, 0, 393236, 3211264, 0, 393237, 3604480, 0, 786446, 3211264, 12, 786447, 3211264, 12, 786448, 3211264, 12, 786449, 3211264, 12, 786450, 3211264, 12, 786451, 3211264, 12, 786452, 3211264, 12, 786453, 3604480, 12, 458773, 3604480, 9, 524309, 3604480, 9, 589845, 3604480, 9, 655381, 3604480, 9, 720917, 3604480, 9, -524287, 3080192, 0, -524286, 3080192, 0)
layer_1/name = "Layer1"

[node name="Node2D" parent="." instance=ExtResource("3_fppsf")]
position = Vector2(-435, -375)

[node name="interactable" parent="." instance=ExtResource("4_nc40r")]

[node name="Marker" parent="." instance=ExtResource("6_dwwv5")]
position = Vector2(-463, -382)

[node name="LevelFinish" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelFinish"]
position = Vector2(29, -145.5)
shape = SubResource("RectangleShape2D_ogmh3")

[node name="TransitionScreen" parent="." instance=ExtResource("7_xuktg")]
visible = false

[node name="plus_1" parent="." instance=ExtResource("9_lc8ph")]

[node name="Hints" parent="." instance=ExtResource("5_5a6dd")]
position = Vector2(-280, 85)
script = ExtResource("10_5tyod")
popup_scene = ExtResource("11_ivn8i")

[node name="Hints2" parent="." instance=ExtResource("5_5a6dd")]
position = Vector2(199, -31)
script = ExtResource("10_5tyod")
popup_scene = ExtResource("12_2wyrx")

[node name="Hints3" parent="." instance=ExtResource("5_5a6dd")]
position = Vector2(102, 233)
script = ExtResource("10_5tyod")
popup_scene = ExtResource("13_y5j04")

[node name="PopupLayer" type="CanvasLayer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_2wyrx")

[connection signal="body_entered" from="LevelFinish" to="." method="_on_level_finish_body_entered"]
